# TorrentUploader

./: .gitignore  README.md  TODO.txt  TorrentUploader.py  VERSION  errors.py  models.py  pyproject.toml
core/: app.py  client.py
layouts/: layoutLogin.py  layoutLogin.ui  layoutMain.py  layoutMain.ui  layoutPubPreview.py  layoutPubPreview.ui  layoutSettings.py  layoutSettings.ui
models/: __init__.py  _base.py  bangumi.py
utils/: __init__.py  _singleton.py  bangumi.py  configs.py  const.py  helpers.py  jsonlib.py  mypathlib.py  net.py  typedefs.py
utils/gui/: enums.py  exception_hook.py  fileDatabase.py  fileManager.py  filePicker.py  helpers.py  sources.py  torrentDatabase.py  torrentManager.py
utils/gui/models/: proxyTableModel.py  tableModel.py  torrentFilterTableModel.py  torrentTableModel.py
windows/: viewCtxMenu.py  wndLogin.py  wndMain.py  wndPubPreview.py  wndSettings.py
